--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             </article>
             <article>
                 <h2>JavaScript</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima facilis fugiat aliquid repellat, commodi ipsum. Ex dicta eum asperiores aspernatur! Illo ducimus eaque dolorum odio sed aliquid quisquam fugiat adipisci.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima facilis fugiat aliquid repellat, commodi ipsum. Ex dicta
+                eum asperiores aspernatur! Illo ducimus eaque dolorum odio sed aliquid quisquam fugiat adipisci.</p>
             </article>
         </header>
     </main>
